<resources>
    <string name="app_name">CodingChallenge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_details">User details</string>
    <string name="name">Name: %1$s %2$s</string>
    <string name="username">Username: %1$s %2$s</string>
    <string name="city">City: %1$s %2$s</string>
    <string name="myAlbums">My albums</string>
    <string name="myPosts">My posts</string>
    <string name="website">Website: %1$s %2$s</string>
    <string name="phone">Phone:%1$s %2$s</string>
    <string name="email">Email: %1$s %2$s</string>
    <string name="title_activity_album_list">Album titles</string>
    <string name="title_activity_photo_list">Album photos</string>

</resources>
